# MARC_S3_project

./: .gitignore  CMakeLists.txt  README.md  main.c  node.h  tree.c  tree.h
include/: complexity.h  draw.h  loc.h  map.h  marc.h  menu.h  moves.h  node.h  path.h  phase.h  queue.h  stack.h  tree.h
maps/: example2.map  example3.map  example4.map
src/: complexity.c  draw.c  loc.c  main.c  map.c  marc.c  menu.c  menu.h  moves.c  node.c  path.c  phase.c  queue.c  stack.c  tree.c
